--- a/angular.json
+++ b/angular.json
@@ -88,8 +88,11 @@
             ],
             "styles": [
               "src/styles.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootsrap/dist/js/bootstrap.bundle.js"
+            ]
           }
         }
       }
